--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <wrapper id="root"></wrapper>
     
+    <script type="module" src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
